# voice-transcription

./: .gitignore  CLAUDE.md  README.md  com.transcribe.widget.plist  config-backend-m4.yaml  config-backend-sherpa.yaml  config-backend-whisper.yaml  config-sherpa.example.yaml  config-whisper.example.yaml  config-widget.yaml  config.example.yaml  config.m4.example.yaml  install-widget  pyproject.toml  transcribe  transcribe-backend  transcribe-logger  transcribe-m4  transcribe-plugins  transcribe-sherpa  transcribe-whisper  transcribe-widget  uninstall-widget
.transcripts/: 20251221160452-m4-mini.jsonl
docs/: app-distribution.md  voice-activated-transcription-device.md
plugins/: example-log.sh  launchcode-sync.shutdown  launchcode-sync.startup  launchcode-upload  transcript-sync
src/transcribe/: __init__.py  __main__.py  backend.py  backend_sherpa.py  backend_whisper.py  capture.py  cli.py  config.py  diarize.py  embeddings.py  output.py  queue.py  transcribe.py  vad.py
src/transcribe_launcher/: __init__.py  __main__.py
src/transcribe_logger/: __init__.py  __main__.py  logger.py
src/transcribe_m4/: __init__.py  __main__.py  asr.py  batch.py  capture.py  config.py  diarize.py  output.py  pipeline.py
src/transcribe_shared/: __init__.py  capture.py  config.py  speaker_registry.py  tap_capture.py  transcript_filter.py  trigger.py  utterance.py  wakeword.py
src/transcribe_sherpa/: __init__.py  __main__.py  asr.py  capture.py  config.py  embeddings.py  output.py  queue.py  vad.py
src/transcribe_whisper/: __init__.py  __main__.py  asr.py  capture.py  config.py  (+2 more)
(+39 files in other folders)
